fixed winter theme colors

--- a/theme.css
+++ b/theme.css
@@ -1146,30 +1146,30 @@ settings:
     --code-string: #8b4a8b;
     --code-tag: #483d8b;
     --code-value: #008b8b;
-    --heading-primary: #a1cbe8;
-    --heading-secondary: #aed6f2;
-    --heading-tertiary: #2b57ce;
-    --heading-quaternary: #2d5a2d;
-    --heading-quinary: #483d8b;
-    --heading-senary: #008b8b;
-    --heading-primary-rgb: 161, 203, 232;
-    --heading-secondary-rgb: 174, 214, 242;
-    --heading-tertiary-rgb: 43, 87, 206;
-    --heading-quaternary-rgb: 45, 90, 45;
-    --heading-quinary-rgb: 72, 61, 139;
-    --heading-senary-rgb: 0, 139, 139;
-    --folder-1-color: var(--heading-primary);
-    --folder-1-color-rgb: var(--heading-primary-rgb);
-    --folder-2-color: var(--heading-secondary);
-    --folder-2-color-rgb: var(--heading-secondary-rgb);
-    --folder-3-color: var(--heading-tertiary);
-    --folder-3-color-rgb: var(--heading-tertiary-rgb);
-    --folder-4-color: var(--heading-quaternary);
-    --folder-4-color-rgb: var(--heading-quaternary-rgb);
-    --folder-5-color: var(--heading-quinary);
-    --folder-5-color-rgb: var(--heading-quinary-rgb);
-    --folder-6-color: var(--heading-senary);
-    --folder-6-color-rgb: var(--heading-senary-rgb);
+    --heading-primary: #2c5f7f;
+    --heading-primary-rgb: 44, 95, 127;
+    --heading-secondary: #4d7c9a;
+    --heading-secondary-rgb: 77, 124, 154;
+    --heading-tertiary: #5a6b8e;
+    --heading-tertiary-rgb: 90, 107, 142;
+    --heading-quaternary: #3d6b6b;
+    --heading-quaternary-rgb: 61, 107, 107;
+    --heading-quinary: #5b4d7c;
+    --heading-quinary-rgb: 91, 77, 124;
+    --heading-senary: #4d6b5a;
+    --heading-senary-rgb: 77, 107, 90;
+    --heading-primary: #2d5a7a;
+    --heading-primary-rgb: 45, 90, 122;
+    --heading-secondary: #8b3a52;
+    --heading-secondary-rgb: 139, 58, 82;
+    --heading-tertiary: #3d5e4d;
+    --heading-tertiary-rgb: 61, 94, 77;
+    --heading-quaternary: #5a4d75;
+    --heading-quaternary-rgb: 90, 77, 117;
+    --heading-quinary: #4d6b80;
+    --heading-quinary-rgb: 77, 107, 128;
+    --heading-senary: #6b4d5a;
+    --heading-senary-rgb: 107, 77, 90;
     --callout-note: #2e5984;
     --callout-note-rgb: 46, 89, 132;
     --callout-info: #4682b4;
@@ -1248,18 +1248,18 @@ settings:
     --code-string: #c595c5;
     --code-tag: #8a7dd8;
     --code-value: #4dd4d4;
-    --heading-primary: #d4e8f7;
-    --heading-secondary: #a1c8f0;
-    --heading-tertiary: #a8d8e8;
-    --heading-quaternary: #7db37d;
-    --heading-quinary: #8a7dd8;
-    --heading-senary: #4dd4d4;
-    --heading-primary-rgb: 212, 232, 247;
-    --heading-secondary-rgb: 161, 200, 240;
-    --heading-tertiary-rgb: 168, 216, 232;
-    --heading-quaternary-rgb: 125, 179, 125;
-    --heading-quinary-rgb: 138, 125, 216;
-    --heading-senary-rgb: 77, 212, 212;
+    --heading-primary: #7eb3d9;
+    --heading-primary-rgb: 126, 179, 217;
+    --heading-secondary: #d98099;
+    --heading-secondary-rgb: 217, 128, 153;
+    --heading-tertiary: #7db399;
+    --heading-tertiary-rgb: 125, 179, 153;
+    --heading-quaternary: #a89dd9;
+    --heading-quaternary-rgb: 168, 157, 217;
+    --heading-quinary: #99b8cc;
+    --heading-quinary-rgb: 153, 184, 204;
+    --heading-senary: #c299ad;
+    --heading-senary-rgb: 194, 153, 173;
     --folder-1-color: var(--heading-primary);
     --folder-1-color-rgb: var(--heading-primary-rgb);
     --folder-2-color: var(--heading-secondary);
